# UDL-nBodyProblem-FM-EGNN

./: README.md  pyproject.toml
data/: Three_body_2D_test.m  make_infer_table.py  make_loss_table.py  make_plots.m  plot_inferred.m  plot_losses.py
data/infer/: infer_Mdopri5_SS0.01_LA100_IS12000_FDFalse.csv  infer_Mdopri5_SS0.01_LA100_IS12000_FDTrue.csv  infer_Mdopri5_SS0.01_LA10_IS12000_FDFalse.csv  infer_Mdopri5_SS0.01_LA10_IS12000_FDTrue.csv  infer_Mdopri5_SS0.01_LA1_IS12000_FDFalse.csv  infer_Mdopri5_SS0.01_LA1_IS12000_FDTrue.csv  infer_Mdopri5_SS0.01_LA25000_IS25000_FDFalse.csv  infer_Mdopri5_SS0.01_LA25000_IS25000_FDTrue.csv  infer_Mdopri5_SS0.01_LA50_IS12000_FDFalse.csv  infer_Meuler_SS0.01_LA100_IS12000_FDFalse.csv  infer_Meuler_SS0.01_LA100_IS12000_FDTrue.csv  infer_Meuler_SS0.01_LA10_IS12000_FDFalse.csv  infer_Meuler_SS0.01_LA10_IS12000_FDTrue.csv  infer_Meuler_SS0.01_LA1_IS12000_FDFalse.csv  infer_Meuler_SS0.01_LA1_IS12000_FDTrue.csv  infer_Meuler_SS0.01_LA25000_IS25000_FDFalse.csv  infer_Meuler_SS0.01_LA25000_IS25000_FDTrue.csv  infer_Meuler_SS0.01_LA50_IS12000_FDFalse.csv  inferloss_Mdopri5_SS0.01_LA100_IS12000_FDFalse.csv  inferloss_Mdopri5_SS0.01_LA100_IS12000_FDTrue.csv  inferloss_Mdopri5_SS0.01_LA10_IS12000_FDFalse.csv  inferloss_Mdopri5_SS0.01_LA10_IS12000_FDTrue.csv  inferloss_Mdopri5_SS0.01_LA1_IS12000_FDFalse.csv  (+11 more)
data_additional_experiment/: make_loss_table.py  plot_losses.py
experiments/: gridsearch.sh  infer.py  inference.sh  train.py  train_and_infer.py
nbody_fm/: __init__.py  data.py  inference.py  model.py  train.py
(+99 files in other folders)
